--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                   user-centric product development process for the team.</em></p>
               <ul>
                 <li>Boston, MA</li>
-                <li>Phone: To be updadated once I'm back to the States</li>
+                <li>Phone: To be updated once I'm back to the States</li>
                 <li>maiphuongthuytien98@gmail.com</li>
               </ul>
             </div>
