--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
               <div class="portfolio-info">
                 
                 <p>Simple book e-commerce page</p>
-                <a href="https://github.com/tienmai56/e-commerce-book" target="_blank">github linkk</p>
+                <a href="https://github.com/tienmai56/e-commerce-book/tree/main/Final%20prjoject" target="_blank">github linkk</p>
                 <div class="portfolio-links">
                   <a href="" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
